--- a/side-hustle-ai/package.json
+++ b/side-hustle-ai/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
